packages/optimizer/core/src/snapshots/qwik_core__test__dynamic_props_defaults_do_not_subscribe_component.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';
const getValue = () => 0;
export const DynamicDefault = component$(({ value = getValue() }) => {
	console.log(value);
	return <div>{value}</div>;
});

============================= test.js ==

import { untrack } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
//
const _hf0 = (p0, p1)=>p1.value === void 0 ? p0 : p1.value;
const _hf0_str = "p1.value===void 0?p0:p1.value";
//
const q_DynamicDefault_component_x6KgpCjp03E = /*#__PURE__*/ _noopQrl("DynamicDefault_component_x6KgpCjp03E");
//
const getValue = ()=>0;
q_DynamicDefault_component_x6KgpCjp03E.s((_rawProps)=>{
    const _defaultValue = untrack(()=>_rawProps.value) === void 0 ? getValue() : void 0;
    console.log(_rawProps.value === void 0 ? _defaultValue : _rawProps.value);
    return /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal(_hf0, [
        _defaultValue,
        _rawProps
    ], _hf0_str), 1, "u6_0");
});
export const DynamicDefault = /*#__PURE__*/ componentQrl(q_DynamicDefault_component_x6KgpCjp03E);
export { getValue as _auto_getValue };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0BAG4C,2BAAA;;;;;AAD5C,MAAM,WAAW,IAAM;yCACkB;gDAAG,oBAAQ;IACnD,QAAQ,GAAG,WADgC,6CAAA;IAE3C,qBAAO,WAAC;;;;AACT;AAHA,OAAO,MAAM,+BAAiB,qDAG3B\"}")
== DIAGNOSTICS ==

[]
