packages/optimizer/core/src/snapshots/qwik_core__test__example_3.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';
export const App = () => {
	const Header = component$(() => {
		console.log("mount");
		return (
			<div onClick={$((ctx) => console.log(ctx))}/>
		);
	});
	return Header;
};

============================= test.tsx_App_Header_component_B9F3YeqcO1w.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
const q_App_Header_component_div_onClick_aO7uI7Iw6oQ = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ"), "App_Header_component_div_onClick_aO7uI7Iw6oQ");
//
export const App_Header_component_B9F3YeqcO1w = ()=>{
    console.log("mount");
    return <div onClick={q_App_Header_component_div_onClick_aO7uI7Iw6oQ}/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;gDAG2B;IACzB,QAAQ,GAAG,CAAC;IACZ,QACE,IAAI;AAEP\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_B9F3YeqcO1w",
  "entry": null,
  "displayName": "test.tsx_App_Header_component",
  "hash": "B9F3YeqcO1w",
  "canonicalFilename": "test.tsx_App_Header_component_B9F3YeqcO1w",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    104,
    203
  ]
}
*/
============================= test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ.tsx (ENTRY POINT)==

export const App_Header_component_div_onClick_aO7uI7Iw6oQ = (ctx)=>console.log(ctx);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAMmB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "entry": null,
  "displayName": "test.tsx_App_Header_component_div_onClick",
  "hash": "aO7uI7Iw6oQ",
  "canonicalFilename": "test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "path": "",
  "extension": "tsx",
  "parent": "App_Header_component_B9F3YeqcO1w",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    166,
    191
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_Header_component_B9F3YeqcO1w = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_Header_component_B9F3YeqcO1w"), "App_Header_component_B9F3YeqcO1w");
//
export const App = ()=>{
    const Header = /*#__PURE__*/ componentQrl(q_App_Header_component_B9F3YeqcO1w);
    return Header;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEA,OAAO,MAAM,MAAM;IAClB,MAAM,uBAAS;IAMf,OAAO;AACR,EAAE\"}")
== DIAGNOSTICS ==

[]
